# Nexa

./: .gitignore  MANIFEST.in  README.md  chat.py  docker-compose.yml  lm.py  pre_train.py  pyproject.toml  requirements.txt  test_generation.py  train.py
archive/: Dockerfile  chat.py
nexa/: __init__.py  __main__.py  runtime.py
nexa/assets/: README.md
nexa/inference/: __init__.py  chat.py  chat_session.py  critic.py  generation.py  lora.py  memory.py  reasoning.py  self_improve.py  tools.py
nexa/model/: __init__.py  attention.py  components.py  config.py  multimodal_model.py  nexa_model.py
nexa/serving/: __init__.py  batching.py  sessions.py
nexa/tokenizer/: __init__.py  multimodal_tokenizer.py  tokenizer.py
nexa/training/: __init__.py  auto_config.py  collapse_detector.py  contrastive_loss.py  curriculum_loader.py  data.py  image_usage_tracker.py  multimodal_trainer.py  optimizer.py  self_improve_dataset.py  trainer.py  utils.py
nexa/utils/: __init__.py  device.py
nexa/vision/: __init__.py  cross_modal_attention.py  dynamic_tokens.py  image_dropout.py  image_processor.py  image_text_gate.py  projector.py  spatial_patch_selector.py  vision_encoder.py
scripts/: loop_train.py  lora_finetune.py  prepare_reasoning.py
