[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexa"
version = "1.5.0"
description = "A 1B parameter language model with multi-GPU and TPU support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Nexa Team"}
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "tokenizers>=0.13.0",
    "datasets>=2.14.0",
    "tqdm>=4.65.0",
    "tiktoken>=0.7.0",
    "tensorboard>=2.14.0",
    "transformers>=4.40.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
tpu = [
    "torch_xla>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/nghiphaam/Nexa"
Repository = "https://github.com/nghiphaam/Nexa"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nexa", "nexa.*"]
