[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexa"
version = "1.6.0"
description = "Nexa 1.6 language and multimodal model stack"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Nexa Team"}
]
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.24.0",
    "tokenizers>=0.20.0",
    "datasets>=2.14.0",
    "tqdm>=4.66.0",
    "tiktoken>=0.8.0",
    "tensorboard>=2.16.0",
    "transformers>=4.45.0",
    "Pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.8.0",
]
tpu = [
    "torch_xla>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/nghiphaam/Nexa"
Repository = "https://github.com/nghiphaam/Nexa"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nexa", "nexa.*"]

[tool.setuptools.package-data]
nexa = ["assets/*", "assets/**/*"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
